@@ -1,5 +1,8 @@
-$Id: Changelog.txt,v 1.181 2013/02/11 10:31:17 nanard Exp $
+$Id: Changelog.txt,v 1.182 2013/03/11 10:19:11 nanard Exp $
 miniUPnP client Changelog.
+
+2013/03/11:
+  Update Makefile to use JNAerator version 0.11
 
 2013/02/11:
   Fix testminiwget.sh for use with dash
